# quake3-rs

./: Cargo.toml  clippy.toml  shell.nix
.github/workflows/: pages.yml
src/: arena.rs  info.rs  lib.rs
